--- a/ci/Jenkins/Jenkinsfile
+++ b/ci/Jenkins/Jenkinsfile
@@ -29,7 +29,7 @@ pipeline {
     stage('Build and Push Docker Image') {
       environment {
         DOCKER_IMAGE = "famacil/demo-java-app:${build_version}"
-        REGISTRY_CREDENTIALS = credentials('dockerhub')
+        REGISTRY_CREDENTIALS = credentials('docker-cred')
       }
       steps {
         script {
@@ -47,7 +47,7 @@ pipeline {
             GIT_USER_NAME = "cilsocarvalho"
         }
         steps {
-            withCredentials([string(credentialsId: 'github', variable: 'GITHUB_TOKEN')]) {
+            withCredentials([string(credentialsId: 'GITHUB', variable: 'GITHUB_TOKEN')]) {
                 sh '''
                     git config user.email "cilsocarvalho@gmail.com"
                     git config user.name "Cilso Carvalho"
